[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "JLDiff"
version = "1.0.0"
description = "Character by character diff script written in Python producing HTML output"
readme = "README.md"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.6"
authors = [
    {name = "Joshua Lansford"},
]
keywords = ["diff", "character-diff", "html-diff", "text-comparison", "lcs"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JEdward7777/JLDiff"
Repository = "https://github.com/JEdward7777/JLDiff"
"Bug Tracker" = "https://github.com/JEdward7777/JLDiff/issues"

[project.scripts]
jldiff = "JLDiff:main_cli"

[tool.hatch.build.targets.wheel]
only-include = ["JLDiff.py"]
